# ocs-url

./: .gitignore  meson.build
app/: meson.build
app/src/handlers/: confighandler.cpp  ocsurlhandler.cpp
desktop/: meson.build
i18n/: meson.build
subprojects/: qtil.wrap
subprojects/packagefiles/: qtil.patch
subprojects/packagefiles/qtil/: meson.build
